[gd_scene load_steps=15 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Planet.gd" type="Script" id=2]
[ext_resource path="res://Camera2D.gd" type="Script" id=3]
[ext_resource path="res://EndYear.gd" type="Script" id=4]
[ext_resource path="res://Hub.gd" type="Script" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://TradePanel.gd" type="Script" id=7]
[ext_resource path="res://PlanetGenerator.gd" type="Script" id=8]
[ext_resource path="res://Planet.tscn" type="PackedScene" id=9]
[ext_resource path="res://Imports/icon.png" type="Texture" id=10]
[ext_resource path="res://TeamButton.gd" type="Script" id=11]
[ext_resource path="res://Imports/ship.png" type="Texture" id=12]
[ext_resource path="res://TradeArtManager.gd" type="Script" id=13]
[ext_resource path="res://Fleet.gd" type="Script" id=14]

[node name="Main" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ -17.8393 ]
}

[node name="TradeArtManager" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="Line2D" type="Line2D" parent="."]
default_color = Color( 0.4, 0.501961, 1, 0.415686 )

[node name="Planet" parent="." instance=ExtResource( 9 )]

[node name="Planet2" type="Button" parent="." groups=[
"planet",
]]
margin_left = 613.141
margin_top = 54.1892
margin_right = 689.141
margin_bottom = 124.189
rect_pivot_offset = Vector2( 268.525, 70 )
icon = ExtResource( 1 )
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
worldName = "Outrider"
worldDesg = "Chemical World"
worldTech = "Primitive"
industry = 3.0
population = 0.2

[node name="Details" type="Label" parent="Planet2"]
visible = false
margin_left = 74.892
margin_right = 201.892
margin_bottom = 116.0
text = "NAME: Anacreon
CLASS: K-Type
DESG: Mining World

Chemicals: 0 (+100)
Metals: 0 (+100)
Supplies: 0 (+100)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="warningIcon" type="Sprite" parent="Planet2"]
visible = false
position = Vector2( 38.0664, -30.2764 )
scale = Vector2( 0.0317115, 0.0317115 )
texture = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 510.909, 299.881 )
current = true
script = ExtResource( 3 )

[node name="PlanetGenerator" type="Node2D" parent="."]
script = ExtResource( 8 )
planetCount = 10
radius = 1000.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EndYear" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -113.764
margin_top = -39.1572
margin_right = -47.7643
margin_bottom = -19.1572
rect_scale = Vector2( 1.6746, 1.6746 )
text = "End Year"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetChem" type="Button" parent="CanvasLayer"]
margin_top = 560.843
margin_right = 175.0
margin_bottom = 580.843
text = "Set Type: Chemical World"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetMet" type="Button" parent="CanvasLayer"]
margin_left = 175.0
margin_top = 560.843
margin_right = 350.0
margin_bottom = 580.843
text = "Set Type: Mining World"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetSup" type="Button" parent="CanvasLayer"]
margin_left = 350.0
margin_top = 560.843
margin_right = 525.0
margin_bottom = 580.843
text = "Set Type: Agri World"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetInd" type="Button" parent="CanvasLayer"]
margin_left = 525.0
margin_top = 560.843
margin_right = 700.0
margin_bottom = 580.843
text = "Set Type: Independent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TradeRoute" type="Button" parent="CanvasLayer"]
margin_left = 700.0
margin_top = 560.843
margin_right = 875.0
margin_bottom = 580.843
text = "Set Trade Route"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team1" type="Button" parent="CanvasLayer"]
modulate = Color( 0.494118, 0.423529, 1, 1 )
margin_top = 124.189
margin_right = 59.0
margin_bottom = 144.189
text = "Team 1 (Player)"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
teamName = "Team 1"
teamColor = Color( 0.34902, 0.345098, 0.968627, 1 )

[node name="Team2" type="Button" parent="CanvasLayer"]
modulate = Color( 1, 0.447059, 0.447059, 1 )
margin_top = 156.489
margin_right = 59.0
margin_bottom = 176.489
text = "Team 2"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
teamName = "Team 2"
teamColor = Color( 1, 0.34902, 0.34902, 1 )

[node name="Hub" type="Node2D" parent="CanvasLayer" groups=[
"hub",
]]
script = ExtResource( 5 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_right = 71.0
margin_bottom = 14.0
rect_scale = Vector2( 1.70806, 1.70806 )
text = "YEAR: 4021"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TradeNotes" type="Label" parent="CanvasLayer"]
margin_top = 23.9128
margin_right = 40.0
margin_bottom = 37.9128
text = "Please select planet 1!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TradePanel" type="Panel" parent="CanvasLayer"]
margin_left = -1000.0
margin_top = 124.189
margin_right = -912.0
margin_bottom = 164.189
rect_scale = Vector2( 5.77835, 5.77835 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CanvasLayer/TradePanel"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 0.300281, 0.300281 )
text = "Trade Panel!"

[node name="namew1" type="Label" parent="CanvasLayer/TradePanel"]
margin_left = 0.164404
margin_top = 5.58983
margin_right = 257.0
margin_bottom = 19.5898
rect_scale = Vector2( 0.177769, 0.177769 )
text = "World 1: "
autowrap = true

[node name="namew2" type="Label" parent="CanvasLayer/TradePanel"]
margin_left = 45.705
margin_top = 5.58983
margin_right = 296.0
margin_bottom = 19.5898
rect_scale = Vector2( 0.167722, 0.167722 )
text = "World 1: "
autowrap = true

[node name="Done" type="Button" parent="CanvasLayer/TradePanel"]
margin_left = 73.0903
margin_top = 32.7207
margin_right = 119.09
margin_bottom = 52.7207
rect_scale = Vector2( 0.296165, 0.308095 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1inChem" type="Button" parent="CanvasLayer/TradePanel"]
margin_left = 28.4627
margin_top = 23.3067
margin_right = 48.4627
margin_bottom = 43.3067
rect_scale = Vector2( 0.13725, 0.10832 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1outChem" type="Button" parent="CanvasLayer/TradePanel"]
margin_left = 44.4689
margin_top = 25.2804
margin_right = 64.4689
margin_bottom = 45.2804
rect_rotation = -180.0
rect_scale = Vector2( 0.13725, 0.10832 )
text = "<"

[node name="maxInChem" type="Button" parent="CanvasLayer/TradePanel"]
margin_left = 22.0785
margin_top = 23.3067
margin_right = 58.0785
margin_bottom = 43.3067
rect_scale = Vector2( 0.13725, 0.10832 )
text = "<<<"

[node name="maxOutChem" type="Button" parent="CanvasLayer/TradePanel"]
margin_left = 50.3064
margin_top = 25.2804
margin_right = 86.3064
margin_bottom = 45.2804
rect_rotation = 180.0
rect_scale = Vector2( 0.13725, 0.10832 )
text = "<<<"

[node name="zero" type="Button" parent="CanvasLayer/TradePanel"]
margin_left = 33.6537
margin_top = 20.056
margin_right = 69.6537
margin_bottom = 40.056
rect_rotation = 359.999
rect_scale = Vector2( 0.13725, 0.10832 )
text = "0"

[node name="Chemical" type="Label" parent="CanvasLayer/TradePanel"]
margin_left = 32.222
margin_top = 23.3067
margin_right = 98.222
margin_bottom = 37.3067
rect_scale = Vector2( 0.131555, 0.140981 )
text = "Chemicals"

[node name="chemstuff" type="Label" parent="CanvasLayer/TradePanel"]
margin_left = 32.0261
margin_top = 25.2658
margin_right = 98.0261
margin_bottom = 21.0
rect_scale = Vector2( 0.131555, 0.140981 )
text = "0"
align = 1

[node name="FleetStatus" type="Label" parent="CanvasLayer"]
margin_left = 878.877
margin_top = 23.9128
margin_right = 996.877
margin_bottom = 105.913
text = "FLEET STATUS
Fighters - 0
Transports - 0
Jumpships - 0
Jumptransports - 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefuelFleet" type="Button" parent="CanvasLayer"]
margin_left = 878.877
margin_top = 138.433
margin_right = 890.877
margin_bottom = 158.433
text = "Refuel Fleet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="PlanetDetails" type="Label" parent="."]
visible = false
margin_left = 878.877
margin_right = 1026.0
margin_bottom = 14.0
text = "sdasd"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ship" type="Sprite" parent="."]
position = Vector2( 274.205, 387.79 )
scale = Vector2( 0.434346, 0.434346 )
texture = ExtResource( 12 )

[node name="Fleet" type="Node2D" parent="." groups=[
"fleet",
]]
position = Vector2( 256.688, 75.7555 )
script = ExtResource( 14 )

[node name="ship" type="Sprite" parent="Fleet"]
position = Vector2( 0, -29.9287 )
scale = Vector2( 0.152303, 0.152303 )
texture = ExtResource( 12 )

[node name="ship2" type="Sprite" parent="Fleet"]
position = Vector2( -18.972, 15.7605 )
scale = Vector2( 0.152303, 0.152303 )
texture = ExtResource( 12 )

[node name="ship3" type="Sprite" parent="Fleet"]
position = Vector2( 20.2925, 15.3204 )
scale = Vector2( 0.152303, 0.152303 )
texture = ExtResource( 12 )

[node name="Area2D" type="Area2D" parent="Fleet"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Fleet/Area2D"]
polygon = PoolVector2Array( -39.6828, 26.2526, -9.49446, -50.0127, 11.5579, -50.4099, 36.1853, 11.9529, 38.5685, 36.183, -34.1218, 36.5802 )

[node name="icon" type="Sprite" parent="Fleet"]
visible = false
position = Vector2( 0, -75.7554 )
scale = Vector2( 0.0228264, 0.0228264 )
texture = ExtResource( 10 )

[node name="inRange" type="Sprite" parent="Fleet"]
modulate = Color( 0, 0.486275, 1, 1 )
position = Vector2( 0, 58.4714 )
rotation = -3.14159
scale = Vector2( 0.0228264, 0.0228264 )
texture = ExtResource( 10 )
[connection signal="pressed" from="Planet2" to="Planet2" method="_on_Planet_pressed"]
[connection signal="pressed" from="CanvasLayer/EndYear" to="CanvasLayer/EndYear" method="_on_EndYear_pressed"]
[connection signal="pressed" from="CanvasLayer/SetChem" to="CanvasLayer/Hub" method="_on_SetChem_pressed"]
[connection signal="pressed" from="CanvasLayer/SetMet" to="CanvasLayer/Hub" method="_on_SetMet_pressed"]
[connection signal="pressed" from="CanvasLayer/SetSup" to="CanvasLayer/Hub" method="_on_SetSup_pressed"]
[connection signal="pressed" from="CanvasLayer/SetInd" to="CanvasLayer/Hub" method="_on_SetInd_pressed"]
[connection signal="pressed" from="CanvasLayer/TradeRoute" to="CanvasLayer/Hub" method="_on_TradeRoute_pressed"]
[connection signal="pressed" from="CanvasLayer/TradePanel/Done" to="CanvasLayer/TradePanel" method="_on_Done_pressed"]
[connection signal="pressed" from="CanvasLayer/TradePanel/1inChem" to="CanvasLayer/TradePanel" method="_on_1inChem_pressed"]
[connection signal="pressed" from="CanvasLayer/TradePanel/1outChem" to="CanvasLayer/TradePanel" method="_on_1outChem_pressed"]
[connection signal="pressed" from="CanvasLayer/TradePanel/maxInChem" to="CanvasLayer/TradePanel" method="_on_maxInChem_pressed"]
[connection signal="pressed" from="CanvasLayer/TradePanel/maxOutChem" to="CanvasLayer/TradePanel" method="_on_maxOutChem_pressed"]
[connection signal="pressed" from="CanvasLayer/TradePanel/zero" to="CanvasLayer/TradePanel" method="_on_zero_pressed"]
[connection signal="pressed" from="CanvasLayer/RefuelFleet" to="CanvasLayer/Hub" method="_on_RefuelFleet_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="Fleet/Area2D" to="Fleet" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Fleet/Area2D" to="Fleet" method="_on_Area2D_mouse_exited"]
